--- a/deploy/helm/charts/values.yaml
+++ b/deploy/helm/charts/values.yaml
@@ -47,6 +47,8 @@ ndm:
     enablePathFilter: true
     includePaths: ""
     excludePaths: "loop,fd0,sr0,/dev/ram,/dev/dm-,/dev/md,/dev/rbd,/dev/zd"
+    enableModelFilter: true
+    excludeModels: "Mayastor NVMe controller"
   probes:
     enableSeachest: false
     enableUdevProbe: true
