--- a/deploy/yamls/node-disk-manager-config.yaml
+++ b/deploy/yamls/node-disk-manager-config.yaml
@@ -38,6 +38,11 @@ data:
         state: true
         include: ""
         exclude: "/dev/loop,/dev/fd0,/dev/sr0,/dev/ram,/dev/md,/dev/dm-,/dev/rbd,/dev/zd"
+      - key: model-filter
+        name: model filter
+        state: true
+        include: ""
+        exclude: "Mayastor NVMe controller"
     # metconfig can be used to decorate the block device with different types of labels
     # that are available on the node or come in a device properties.
     # node labels - the node where bd is discovered. A whitlisted label prefixes
